<resources>
    <string name="qa_footer_view_behavior">com.mredrock.cyxbs.qa.ui.widget.FooterViewBehavior</string>
    <string name="qa_question_item_show_picture">查看图片</string>
    <string name="qa_question_item_tag">#%1$s#</string>
    <string name="qa_question_item_reward">%1$d积分</string>
    <string name="qa_question_item_disappear">%1$s后消失</string>
    <string name="qa_question_list_empty_hint">邮问 问你想问~~</string>
    <string name="qa_loading_error">加载出错了，点击重试吧~</string>
    <string name="qa_question_from_mine_loading_error">无法识别问题,可能问题已过期</string>
    <string name="qa_answer_from_mine_loading_error">无法识别回答,可能回答已过期</string>
    <string name="qa_loading_from_mine_unknown_error">未知错误</string>
    <string name="qa_answer_list_title">求助详情</string>
    <string name="qa_answer_reply_hint">回复</string>
    <string name="qa_answer_reply_count">%1$s条回复</string>
    <string name="qa_report_menu_title">更多</string>
    <string name="qa_answer_list_add_reward">加价</string>
    <string name="qa_answer_list_cancel_question">取消提问</string>
    <string name="qa_answer_list_ignore_question">忽略</string>
    <string name="qa_answer_list_help">帮助</string>
    <string name="qa_answer_list_accepted">已解决</string>
    <string name="qa_answer_list_accept">采纳</string>z
    <string name="qa_answer_list_answer_date">%1$s前</string>
    <string name="qa_answer_list_no_answer_hint">还没有回答哦~</string>
    <string name="qa_answer_list_sort_by_time">按时间排序</string>
    <string name="qa_answer_list_sort_by_default">默认排序</string>
    <string name="qa_comment_list_title">回答详情</string>
    <string name="qa_comment_list_praise_count">点赞（%1$s）</string>
    <string name="qa_comment_list_comment_count">评论（%1$s）</string>
    <string name="qa_comment_item_answer_count">评论%1$s</string>
    <string name="qa_comment_list_comment_loading_hint">努力加载中，请不要多次点击哦~</string>
    <string name="qa_comment_dialog_edt_hint">添加你的评论</string>
    <string name="qa_comment_dialog_send_comment">发送</string>
    <string name="qa_comment_dialog_error_input_hint">请先输入有效内容哦~</string>
    <string name="qa_service_error_hint">服务器错误，请稍后再试</string>
    <string name="qa_quiz_dialog_header_cancel">取消</string>
    <string name="qa_quiz_dialog_header_sure">完成</string>
    <string name="qa_quiz_dialog_title_setting">求助设置</string>
    <string name="qa_quiz_dialog_title_type_select">选择求助类型</string>
    <string name="qa_quiz_dialog_next">下一步</string>
    <string name="qa_quiz_dialog_type_study">学习</string>
    <string name="qa_quiz_dialog_type_life">生活</string>
    <string name="qa_quiz_dialog_type_emotion">情感</string>
    <string name="qa_quiz_dialog_type_other">其他</string>
    <string name="qa_quiz_tag">#%1$s#</string>
    <string name="qa_quiz_title_hint">请输入标题</string>
    <string name="qa_quiz_title">求助</string>
    <string name="qa_quiz_content_hint">详细描述你的问题和需求，表达越清楚，越容易获得帮助哦！</string>
    <string name="qa_quiz_anonymous">匿名求助</string>
    <string name="qa_quiz_tags_edit_dialog_title">添加话题</string>
    <string name="qa_quiz_dialog_sure">确定</string>
    <string name="qa_common_dialog_exit">保存并退出</string>
    <string name="qa_quiz_dialog_accept">采纳</string>
    <string name="qa_quiz_tag_edit_dialog_hot_tags">热门话题</string>
    <string name="qa_quiz_hint_title_empty">标题不能为空哦~</string>
    <string name="qa_hint_content_empty">内容不能为空哦~</string>
    <string name="qa_hint_tag_empty">需要填写话题哦~</string>
    <string name="qa_quiz_save_failed">抱歉暂时没有存入草稿箱呢…</string>
    <string name="qa_quiz_update_failed">抱歉暂时没有更新草稿箱呢…</string>
    <string name="qa_quiz_save_success">成功存入草稿箱~</string>
    <string name="qa_quiz_update_success">成功更新草稿箱~</string>
    <string name="qa_answer_load_draft_question_failed">问题加载失败</string>
    <string name="qa_quiz_dialog_cancel">取消</string>
    <string name="qa_quiz_error_time_too_short">设置的时间太短了哦~</string>
    <string name="qa_quiz_reward_set_dialog_title">求助设置</string>
    <string name="qa_quiz_dialog_submit">发布</string>
    <string name="qa_quiz_reward_set_my_reward">积分剩余：%1$d</string>
    <string name="qa_quiz_reward_set_cur_question_reward">%1$d积分</string>
    <string name="qa_quiz_error_reward_low">积分多，朋友多！客官多打赏点儿~</string>
    <string name="qa_quiz_error_reward_not_enough">已经拿不出这么多硬币了( ﾉД`)</string>
    <string name="qa_answer_edit_content_hint">请尽可能给出明确的解决思路哦！</string>
    <string name="qa_answer_question_title">提供帮助</string>
    <string name="qa_answer_whether_accept_answer_text">是 否 采 纳 该 问 题</string>
    <string name="qa_answer_submit_answer">提交</string>
    <string name="qa_hint_report_success">举报成功，会尽快为您处理</string>
    <string name="qa_report_report_reason_hint">请选择举报原因</string>
    <string name="qa_report_content_hint">请输入具体投诉原因（选填）</string>
    <string name="qa_report_submit_report">提交</string>
    <string name="qa_report_title">举报</string>
    <string name="qa_crop">裁剪</string>
    <string name="qa_fragment_head_title">邮问</string>
    <string name="qa_fragment_head_give_question">提 问</string>
    <string name="qa_comment_new_comment_text_view_hint">发布评论</string>
    <string name="qa_answer_btn_text">回答</string>
    <string name="qa_question_new_question_title_hint">输入标题</string>
    <string name="qa_answer_activity_question_describe">问题描述</string>
    <string name="qa_answer_question_detail_show_more">展开详情</string>
    <string name="qa_quiz_select_type_study">学习</string>
    <string name="qa_quiz_select_type_anonymous">匿名</string>
    <string name="qa_quiz_select_type_life">生活</string>
    <string name="qa_quiz_select_type_others">其他</string>
    <string name="qa_quiz_reward_set_text">悬赏积分</string>
    <string name="qa_quiz_mission_deadline_title_text">任务最晚完成时间</string>
    <string name="qa_quiz_dialog_cancel_text">取消</string>
    <string name="qa_reward_set_title_text">积分设置</string>
    <string name="qa_question_report_text">举报该问题</string>
    <string name="qa_answer_report_text">举报该回答</string>
    <string name="qa_comment_report_text">举报该评论</string>
    <string name="qa_quiz_toolbar_title_text">提问</string>
    <string name="qa_quiz_dialog_exit_text">退 出 编 辑</string>
    <string name="qa_answer_dialog_exit_text">退 出 回 答</string>
    <string name="qa_answer_accept_dialog_exit_subtitle_text">采纳后他将获得你的悬赏积分</string>
    <string name="qa_answer_publish_dialog_exit_subtitle_text">你的内容还未保存，是否退出？</string>
    <string name="qa_quiz_dialog_not_save_text">你的资料还未保存，是否退出？</string>
    <string name="qa_quiz_reward_more_text">你的悬赏积分超过你拥有积分了</string>
    <string name="qa_quiz_down_reward_get_more_text">降低悬赏积分或者去赚取更多积分吧~</string>
    <string name="qa_quiz_reward_not_enough_text">积 分 不 够</string>
    <string name="qa_report_rubbish_text">垃圾广告信息</string>
    <string name="qa_report_useless_question_text">无用提问</string>
    <string name="qa_report_useless_answer_text">无用回答</string>
    <string name="qa_report_useless_comment_text">无用评论</string>
    <string name="qa_report_illegal_text">煽动信息、造谣</string>
    <string name="qa_report_infringement_text">侵权信息</string>
    <string name="qa_report_other_text">其他</string>
    <string name="qa_report_ignore_text">屏蔽该问题</string>
    <string name="qa_report_dialog_cancel_text">取消</string>
    <string name="qa_report_explain">举报成功获得积分</string>
    <string name="qa_answer_submit_successfully_text">您已提交成功</string>
    <string name="qa_reward_description_first_title">悬赏积分是干嘛的?</string>
    <string name="qa_reward_description_first_content">为了营造邮问社区的良好氛围，使你的问题得 到及时的解答，你将通过您获取的积分来进行 提问，而你选取的优质回答将获得你的悬赏积 分</string>
    <string name="qa_reward_description_second_title">任务最晚完成时间是什么意思?</string>
    <string name="qa_reward_description_second_content">如上所诉，你可以主动对您获取的回答进行采 纳，将你的积分悬赏给该用户；但是如果你没 有及时对用户的回答进行采纳，且你的提问已 经超过了任务最晚完成时间，这个时候我们将 对你所提问的所有回答进行查看，选出最有价 值的回答，将你的积分悬赏给该用户。</string>
    <string name="qa_reward_description_third_title">如何评判优质回答?</string>
    <string name="qa_reward_description_third_content">优质回答的首要判断条件是用户自行选择进行 采纳的用户，若用户在任务最短完成时间内没 有进行采纳，且该提问下已有回答，这时候首 要判断机制为：获得最高赞回答数的回答为该 提问的优质回答。</string>
    <string name="qa_reward_description_fourth_title">如果任务最晚完成时间内没有回答?</string>
    <string name="qa_reward_description_fourth_content">若存在这种情况的话，我们将对您设置的悬赏 积分退还至您的账户。</string>
    <string name="qa_reward_description_bottom_text">条款详见《掌上重邮用户协议》</string>
    <string name="qa_comment_list_no_comment_hint">还没有评论哦~</string>
    <string name="qa_answer_praise_dealing">正在处理上次点击</string>
    <string name="qa_answer_show_question">查看问题</string>
    <string name="qa_quiz_title_text_size_toast">已达最多字数</string>

    <string-array name="qa_title_type">
        <item>问题</item>
        <item>回答</item>
        <item>评论</item>
    </string-array>
</resources>
