<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/qa_dialog_notice_my_reward_not_enough_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="19dp"
    android:paddingTop="27dp"
    android:paddingEnd="19dp"
    android:paddingBottom="9dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/qa_reward_description_first_title"
        android:textColor="@color/levelTwoFontColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/qa_reward_description_first_content"
        android:textColor="@color/levelTwoFontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="12dp"
        android:text="@string/qa_reward_description_second_title"
        android:textColor="@color/levelTwoFontColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/qa_reward_description_second_content"
        android:textColor="@color/levelTwoFontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="12dp"
        android:text="@string/qa_reward_description_third_title"
        android:textColor="@color/levelTwoFontColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/qa_reward_description_third_content"
        android:textColor="@color/levelTwoFontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="12dp"
        android:text="@string/qa_reward_description_fourth_title"
        android:textColor="@color/levelTwoFontColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/qa_reward_description_fourth_content"
        android:textColor="@color/levelTwoFontColor"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/qa_reward_description_bottom_text"
        android:textColor="@color/qa_dialog_qa_reward_description_bottom_text_color"
        android:textSize="11sp" />

</LinearLayout>