<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/qa_selector_quiz_type_default_selected"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="2dp"
        android:text="@string/qa_quiz_select_type_study"
        android:textColor="@color/qa_quiz_selected_type_text_color"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/qa_selector_quiz_type_default_select"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="2dp"
        android:text="@string/qa_quiz_select_type_anonymous"
        android:textColor="@color/qa_quiz_select_type_text_color"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/qa_quiz_select_type_background"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="2dp"
        android:text="@string/qa_quiz_select_type_life"
        android:textColor="@color/qa_quiz_select_type_text_color"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/qa_quiz_select_type_background"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="2dp"
        android:paddingEnd="10dp"
        android:paddingBottom="2dp"
        android:text="@string/qa_quiz_select_type_others"
        android:textColor="@color/qa_quiz_select_type_text_color"
        android:textSize="13sp" />
</LinearLayout>
