<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="10dp"
    android:paddingEnd="16dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tv_quiz_dialog_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qa_quiz_dialog_title_type_select"
        android:textColor="@color/qa_quiz_dialog_title_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quiz_dialog_type_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qa_quiz_dialog_next"
        android:textColor="@color/qa_quiz_dialog_header_button_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_quiz_dialog_type_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_quiz_dialog_type_title" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/tv_quiz_dialog_type_study"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:checked="true"
        android:drawableTop="@drawable/qa_selector_quiz_type_study"
        android:drawablePadding="13dp"
        android:text="@string/qa_quiz_dialog_type_study"
        android:gravity="center"
        android:textColor="@color/qa_quiz_type_select_dialog_type_title_color"
        app:layout_constraintEnd_toStartOf="@id/tv_quiz_dialog_type_life"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quiz_dialog_type_title" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/tv_quiz_dialog_type_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/qa_selector_quiz_type_life"
        android:drawablePadding="13dp"
        android:text="@string/qa_quiz_dialog_type_life"
        android:gravity="center"
        android:textColor="@color/qa_quiz_type_select_dialog_type_title_color"
        app:layout_constraintBottom_toBottomOf="@+id/tv_quiz_dialog_type_study"
        app:layout_constraintEnd_toStartOf="@id/tv_quiz_dialog_type_emotion"
        app:layout_constraintStart_toEndOf="@+id/tv_quiz_dialog_type_study"
        app:layout_constraintTop_toTopOf="@+id/tv_quiz_dialog_type_study" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/tv_quiz_dialog_type_emotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/qa_selector_quiz_type_emotion"
        android:drawablePadding="13dp"
        android:text="@string/qa_quiz_dialog_type_emotion"
        android:gravity="center"
        android:textColor="@color/qa_quiz_type_select_dialog_type_title_color"
        app:layout_constraintBottom_toBottomOf="@+id/tv_quiz_dialog_type_life"
        app:layout_constraintEnd_toStartOf="@id/tv_quiz_dialog_type_other"
        app:layout_constraintStart_toEndOf="@+id/tv_quiz_dialog_type_life"
        app:layout_constraintTop_toTopOf="@+id/tv_quiz_dialog_type_life" />

    <android.support.v7.widget.AppCompatCheckedTextView
        android:id="@+id/tv_quiz_dialog_type_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/qa_selector_quiz_type_other"
        android:drawablePadding="13dp"
        android:text="@string/qa_quiz_dialog_type_other"
        android:gravity="center"
        android:textColor="@color/qa_quiz_type_select_dialog_type_title_color"
        app:layout_constraintBottom_toBottomOf="@+id/tv_quiz_dialog_type_emotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_quiz_dialog_type_emotion"
        app:layout_constraintTop_toTopOf="@+id/tv_quiz_dialog_type_emotion" />

    <ImageView
        android:id="@+id/iv_quiz_dialog_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quiz_dialog_type_study"
        app:srcCompat="@drawable/qa_ic_quiz_type_exit" />
</android.support.constraint.ConstraintLayout>