<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="52dp"
        android:paddingEnd="52dp"
        android:background="@drawable/qa_dialog_notice_my_reward_not_enough_background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="27dp"
            tools:src="@drawable/qa_ic_quiz_quit_edit" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_pic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            tools:text="@string/qa_quiz_dialog_exit_text"
            android:textColor="@color/levelTwoFontColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_notice_first_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:gravity="center"
            tools:text="@string/qa_quiz_dialog_not_save_text"
            android:textColor="@color/dialog_exit_subtitle_text_color"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/tv_notice_second_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_notice_first_line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            tools:text="@string/qa_quiz_down_reward_get_more_text"
            android:textColor="@color/dialog_exit_subtitle_text_color"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_below="@+id/tv_notice_second_line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/qa_main_have_question_btn_background"
            tools:text="@string/qa_common_dialog_exit"
            android:textColor="@color/whiteFontColor"
            android:textSize="15sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:src="@drawable/qa_ic_dialog_notice_cancel" />
</androidx.appcompat.widget.LinearLayoutCompat>
