<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="18dp"
    android:paddingEnd="16dp"
    android:paddingBottom="25dp">

    <TextView
        android:id="@+id/tv_quiz_tags_edit_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/qa_quiz_tags_edit_dialog_title"
        android:textColor="@color/qa_quiz_dialog_title_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_quiz_tags_edit_dialog_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/qa_quiz_dialog_sure"
        android:textColor="@color/qa_quiz_dialog_header_button_color"
        android:textSize="14sp"
        tools:ignore="RelativeOverlap" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_quiz_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_quiz_tags_edit_dialog_title"
        android:layout_marginTop="29dp"
        android:background="@null"
        android:drawableStart="@drawable/qa_ic_quiz_tags_edit"
        android:drawablePadding="8dp"
        android:inputType="text"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:textColor="@color/qa_quiz_tags_edit_color"
        android:textSize="17sp"
        tools:text="线代" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/edt_quiz_tags"
        android:layout_marginTop="8dp"
        android:background="#26000000" />

    <TextView
        android:id="@+id/tv_quiz_hot_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_divider"
        android:layout_marginTop="26dp"
        android:text="@string/qa_quiz_tag_edit_dialog_hot_tags"
        android:textColor="#8c000000"
        android:textSize="14sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_quiz_hot_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_quiz_hot_tags"
        android:layout_marginTop="13dp"
        tools:layoutManager="GridLayoutManager"
        tools:listitem="@layout/qa_recycler_item_quiz_hot_tags"
        tools:spanCount="4" />
</RelativeLayout>