<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/qa_shape_dialog_reward_set_header_background">


    <ImageView
        android:id="@+id/iv_reward_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/qa_ic_dialog_reward_description"
        app:layout_constraintBottom_toBottomOf="@id/tv_reward_set_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_reward_set_title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_reward_set_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/qa_reward_set_title_text"
        android:textColor="@color/common_level_two_font_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quiz_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/qa_quiz_dialog_cancel_text"
        android:textColor="@color/common_level_two_font_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_reward_set_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_reward_set_title" />

    <TextView
        android:id="@+id/tv_mission_deadline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="33dp"
        android:text="@string/qa_quiz_mission_deadline_title_text"
        android:textColor="@color/common_level_two_font_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reward_set_title" />

    <TextView
        android:id="@+id/tv_mission_deadline_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:textColor="@color/common_qa_quiz_time_display_color"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mission_deadline_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_mission_deadline_title"
        tools:text="2019年10月2日5时21分" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_time_select"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mission_deadline_title">

        <com.mredrock.cyxbs.qa.pages.quiz.ui.widget.QuizTimeNumberPicker
            android:id="@+id/tp_quiz_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tp_quiz_hour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mredrock.cyxbs.qa.pages.quiz.ui.widget.QuizTimeNumberPicker
            android:id="@+id/tp_quiz_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tp_quiz_day"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mredrock.cyxbs.qa.pages.quiz.ui.widget.QuizTimeNumberPicker
            android:id="@+id/tp_quiz_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tp_quiz_hour"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/qa_ic_quiz_time_select_indicator_background"
        app:layout_constraintBottom_toBottomOf="@id/rl_time_select"
        app:layout_constraintEnd_toStartOf="@id/rl_time_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rl_time_select" />

    <ImageView
        android:id="@+id/iv_reward_set_dialog_divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:alpha="0.3"
        android:background="@color/common_qa_question_recycler_item_divide_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_time_select" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_my_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/qa_quiz_reward_set_text"
        android:textColor="@color/common_level_two_font_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_reward_set_dialog_divide_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_my_reward_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:alpha="0.57"
        android:gravity="center"
        android:textColor="@color/common_level_two_font_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_my_reward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_my_reward"
        tools:text="拥有积分：199" />

    <RelativeLayout
        android:id="@+id/rl_reward_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clipChildren="false"
        android:layerType="software"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_my_reward">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_set_reward_count"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:clipChildren="false" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vp_set_reward_count"
            android:layout_centerHorizontal="true"
            android:background="@drawable/qa_ic_quiz_reward_select_indicator_background" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fl_quiz_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/qa_shape_main_have_question_btn_background"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/qa_quiz_dialog_submit"
        android:textColor="@color/common_white_font_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/gl_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_reward_picker" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>